test/samples/invalid/interp/mod_zero.maruir
fun main(): u8
locals a: u8, b: u8;
{
    entry:
        a := u8(5) % u8(0);

        return a;
}
